--- a/store/index.html
+++ b/store/index.html
@@ -1,11 +1,11 @@
 ---
 title: Store
-
+css: store
 ---
 
 <div class="mb-5">
-  <p>Browse components to be added to your next big project!</p>
-  <div class="card">
+  <p class="text-center">Browse components to be added to your next big project!</p>
+  <div class="card mx-auto">
     <div class="card-content">
       <h3 class="my-1">Categories</h3>
       <div class="vertical-list">
