--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ css: home
           {%- endif -%}
           <a class="col-auto btn-link mt-3 mt-lg-0" href="{{ item.link | relative_url }}">
             <div class="card">
-              <img class="card-image" src="{{ item.src }}" alt="{{ item.name }} thumbnail" loading="lazy" height="250">
+              <img class="card-image" src="{{ item.src | relative_url }}" alt="{{ item.name }} thumbnail" loading="lazy" height="250">
               <div class="card-content">
                 <h4 class="card-header">{{ item.name }}</h4>
                 <small class="card-desc">{{ item.desc }}</small>
