--- a/projects/index.html
+++ b/projects/index.html
@@ -9,7 +9,7 @@ css: projects
       <a class="btn-link" href="{{ item.link | relative_url }}">
         <div class="card hoverable">
           <div class="row">
-            <img class="col-auto card-image" src="{{ item.src }}" alt="{{ item.name }} thumbnail" loading="lazy" height="250">
+            <img class="col-auto card-image" src="{{ item.src | relative_url }}" alt="{{ item.name }} thumbnail" loading="lazy" height="250">
             <div class="col">
               <div class="card-content">
                 <h4 class="card-header">{{ item.name }}</h4>
