--- a/404.html
+++ b/404.html
@@ -2,9 +2,8 @@
 layout: default-page
 ---
 
-<div class="text-center container">
-  <h1 class="m-0 mt-3" style="font-size: 7rem;">404</h1>
-
+<div class="container text-center my-5">
+  <h1 class="mb-0" style="font-size: 7rem;">404</h1>
   <p><strong>Page not found :(</strong></p>
-  <p class="mb-5">The requested page could not be found.</p>
+  <p>I want to go <a href="/">home</a></p>
 </div>
