--- a/store/forms/index.html
+++ b/store/forms/index.html
@@ -6,13 +6,13 @@ css: forms
 
 <section>
   <div class="text-right">
-    <a class="btn-link arrow-hover" href="{% link store/index.html %}">
-      <i class="fas fa-arrow-left arrow left mr-3"></i>
+    <a class="btn-link arrow-hover" href="{% link store/index.html %}" aria-label="Back to store page">
+      <i class="fas fa-arrow-left arrow left mr-3" aria-hidden="true"></i>
       Back
     </a>
   </div>
   <br>
-  <p>Click the input fields for animations. Click <i class="far fa-lightbulb"></i> for more options!</p>
+  <p>Click the input fields for animations. Click <i class="far fa-lightbulb" aria-hidden="true"></i> for more options!</p>
 </section>
 <br>
 <section>
