--- a/store/gems/index.html
+++ b/store/gems/index.html
@@ -6,8 +6,8 @@ css: gems
 
 <section>
   <div class="text-right">
-    <a class="btn-link arrow-hover" href="{% link store/index.html %}">
-      <i class="fas fa-arrow-left arrow left mr-3"></i>
+    <a class="btn-link arrow-hover" href="{% link store/index.html %}" aria-label="Back to store page">
+      <i class="fas fa-arrow-left arrow left mr-3" aria-hidden="true"></i>
       Back
     </a>
   </div>
