--- a/static/resume.html
+++ b/static/resume.html
@@ -29,7 +29,9 @@
           <h2>Skills</h2>
           <dl>
             <dt>Frontend</dt>
-            <dd>React, Vue, Svelte, Jekyll, Gatsby, Nuxt, Sapper</dd>
+            <dd>
+              TypeScript, React, Vue, Svelte, Jekyll, Gatsby, Nuxt, Sapper
+            </dd>
             <dt>Backend</dt>
             <dd>GraphQL, Nexus, Objection.js, PostgreSQL, Postgraphile</dd>
             <dt>Others</dt>
