--- a/src/app.html
+++ b/src/app.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&family=Source+Sans+Pro:wght@300;400;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&family=Source+Sans+3:wght@300;400;600;700&display=swap"
     />
     %sveltekit.head%
   </head>
